kubernetes/vader/applications/user-apps/externals/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: proxmox-svc
  namespace: user-apps

spec:
  clusterIP: None
  ports:
    - name: https
      port: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-svc
  namespace: user-apps

subsets:
  - addresses:
      - ip: 192.168.1.99
    ports:
      - port: 8006
        name: https 
---
apiVersion: v1
kind: Service

metadata:
  name: unifi-svc
  namespace: user-apps

spec:
  clusterIP: None
  ports:
    - name: https
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-svc
  namespace: user-apps

subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
        name: https
