kubernetes/vader/applications/user-apps/externals/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: proxmox-ingressroute
  namespace: user-apps

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`proxmox.feldman.in`)
      kind: Rule
      services:
        - name: proxmox-svc
          port: 8006
  tls:
    secretName: proxmox-feldman-in-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: unifi-ingressroute
  namespace: user-apps

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`unifi.feldman.in`)
      kind: Rule
      services:
        - name: unifi-svc
          port: 8006
  tls:
    secretName: unifi-feldman-in-tls
